# hqmonitor

./: Cargo.toml  README.md  default.cfg  workday.xml
src/: biz.rs  main.rs  utils.rs  views.rs
template/: index.tpl  itemadd.tpl  list.tpl
templates/: history.html.tera  index.html.tera  list.html.tera
